added: photo authorization settings

--- a/DiffuserStick/Info.plist
+++ b/DiffuserStick/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진을 가져와 애플리케이션에 저장하기 위함입니다.</string>
 	<key>NSCameraUsageDescription</key>
