--- a/DiffuserStick/Info.plist
+++ b/DiffuserStick/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>광고 식별자 수집에 동의하면 배너 광고에 사용자 맞춤형 광고가 표시됩니다.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -19,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-6364767349592629~6920999245</string>
 	<key>GADArchive</key>
@@ -38,6 +36,8 @@
 	<string>사진을 찍어 디퓨저 목록, 자세히 보기 페이지 등에서 디퓨저 사진을 보기 위해 필요합니다.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사진을 가져와 디퓨저 목록, 자세히 보기 페이지 등에서 디퓨저 사진을 보기 위해 필요합니다.</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>광고 식별자 수집에 동의하면 배너 광고에 사용자 맞춤형 광고가 표시됩니다.</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
